Fix overflowing multiline accordian text

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -318,7 +318,9 @@ a
 .el-collapse-item__header
 	background-color transparent !important
 	border-bottom 1px solid $borderColor
-	padding-left 10px
+	height auto !important
+	line-height 1.25 !important
+	padding 1em
 	&.is-active
 		color $elementAccentColor
 	&:not(.is-active):hover
